Fixed issue with gym details taking up too much space and offsetting footer's positioning

--- a/server/public/scss/components/listing-card.scss
+++ b/server/public/scss/components/listing-card.scss
@@ -7,16 +7,6 @@
 // "lg": 960px,
 // "xl": 1200px
 
-.listings-main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  overflow-y: scroll;
-  margin-top: 2rem;
-}
-
 .card-anchor {
   display: flex;
   justify-content: center;
