--- a/server/public/scss/pages/gym.scss
+++ b/server/public/scss/pages/gym.scss
@@ -14,6 +14,7 @@
   height: 100%;
   background-color: rgba(255, 255, 255, 0.5);
   padding: 1em;
+  overflow-y: scroll;
 
   @include lg {
     flex-direction: row;
@@ -65,6 +66,10 @@
   .gym-title {
     color: black;
     font-size: 2em;
+  }
+
+  .gym-body {
+    // height: 100%;
   }
 
   .gym-address {
